Add infer intents page
Introduces a new infer intents page with selectable inference modes and real-time progress updates. Enhances the dataset upload page by persisting upload state in localStorage, handling user authentication, and providing a reset option after upload completion. Removes unused stats and Twitter link from the profile page, and updates the visualizations page to use a new Looker Studio report. Also adds Google Cloud credentials to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Google Cloud credentials
+service-account-key.json
 # Python virtual environments
 venv/
 .env/
@@ -30,3 +32,4 @@ htmlcov/
 
 # Environment variables
 .env
+
