--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.74.0",
+    "chart.js": "^4.5.1",
     "next": "15.5.4",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0"
   },
